--- a/TODO List MAJOR PROJECT/index.html
+++ b/TODO List MAJOR PROJECT/index.html
@@ -17,9 +17,9 @@
         <input type="text" placeholder="Add New Todo">
         
         <ul>
-            <li><span><i class="fa fa-trash"></i></span> ksdfhue</li>
-            <li><span><i class="fa fa-trash"></i></span> aefae</li>
-            <li><span><i class="fa fa-trash"></i></span> eafaef</li>
+            <li><span><i class="fa fa-trash"></i></span> Walk the dog.</li>
+            <li><span><i class="fa fa-trash"></i></span> Buy Groceries.</li>
+            <li><span><i class="fa fa-trash"></i></span> Pay utilities.</li>
         </ul>
         
     </div>
